--- a/composer.json
+++ b/composer.json
@@ -21,19 +21,20 @@
     },
     "require-dev": {
         "laravel/lumen-framework": "5.5.2",
-        "phpunit/phpunit": "~7.0",
-        "squizlabs/php_codesniffer": "3.5.4",
+        "phpunit/phpunit": "8.5.15",
+        "squizlabs/php_codesniffer": "3.6.0",
         "phpcompatibility/php-compatibility": "9.3.5"
     },
     "autoload": {
         "psr-4": {
-            "PixelOven\\": "src"
+            "PixelOven\\": "src/PixelOven"
         }
     },
     "scripts": {
         "post-install-cmd": "vendor/bin/phpcs --config-set installed_paths vendor/phpcompatibility/php-compatibility",
         "post-update-cmd" : "vendor/bin/phpcs --config-set installed_paths vendor/phpcompatibility/php-compatibility",
-        "lint": "vendor/bin/phpcs --standard=phpcs.xml -d memory_limit=100M",
-        "test": "vendor/bin/phpunit -d memory_limit=100M"
+        "lint": "vendor/bin/phpcs --standard=phpcs.xml",
+        "lint:fix": "vendor/bin/phpcbf --standard=phpcs.xml",
+        "test": "vendor/bin/phpunit"
     }
 }
