--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,10 @@
 version: '3.4'
 services:
-  php:
+  php-7.2:
     container_name: pixeloven-php-7.2
     image: pixeloven-php-7.2
     build:
       context: .
       dockerfile: Dockerfile
+    volumes:
       - ./:/usr/src/app
