chore: pushing stuff

--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,11 @@
             "PixelOven\\": "src/PixelOven"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "PixelOven\\": "tests/PixelOven"
+        }
+    },
     "scripts": {
         "post-install-cmd": "vendor/bin/phpcs --config-set installed_paths vendor/phpcompatibility/php-compatibility",
         "post-update-cmd" : "vendor/bin/phpcs --config-set installed_paths vendor/phpcompatibility/php-compatibility",
