--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,10 @@
         }
     },
     "require": {
-        "php": ">=7.2"
+        "php": ">=7.2",
+        "laravel/lumen-framework": ">=5.5"
     },
     "require-dev": {
-        "laravel/lumen-framework": "5.5.2",
         "phpunit/phpunit": "8.5.15",
         "squizlabs/php_codesniffer": "3.6.0",
         "phpcompatibility/php-compatibility": "9.3.5"
