--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     },
     "require": {
         "php": ">=7.4",
-        "laravel/framework": ">=6.0"
+        "laravel/lumen-framework": ">=6.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.18",
